--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <button onclick="startGame()">Start Game</button>
     <main>
         <div class="container">
           <div class="board">
